projects/rhodes.akn/dist/apps/vault/core.v1.Service.openbao-internal.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault
    helm.sh/chart: openbao-0.28.6
    openbao-internal: "true"
  name: openbao-internal
  namespace: vault
spec:
  clusterIP: None
  ports:
  - appProtocol: HTTP
    name: http
    port: 8200
    targetPort: 8200
  - name: https-internal
    port: 8201
    targetPort: 8201
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/name: vault
    component: server
