projects/rhodes.akn/dist/apps/vault/core.v1.Service.openbao-ui.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault
    helm.sh/chart: openbao-0.28.6
  name: openbao-ui
  namespace: vault
spec:
  ports:
  - name: http
    port: 8200
    targetPort: 8200
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/name: vault
    component: server
  type: ClusterIP
