projects/rhodes.akn/dist/apps/vault/gateway.networking.k8s.io.v1.HTTPRoute.openbao-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/zone: internal
  labels:
    app.kubernetes.io/name: vault
  name: openbao-internal
  namespace: vault
spec:
  hostnames:
  - vault.chezmoi.sh
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: internal
    namespace: ingress-gateway-system
    sectionName: chezmoi.sh-websecure
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: openbao-ui
      port: 8200
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
