projects/rhodes.akn/dist/apps/vault/cilium.io.v2.CiliumNetworkPolicy.allow-intra-namespace.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Permits intra-namespace communication in the vault namespace.
  labels:
    app.kubernetes.io/name: vault
  name: allow-intra-namespace
  namespace: vault
spec:
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: vault
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: vault
