projects/rhodes.akn/dist/apps/vault/cilium.io.v2.CiliumNetworkPolicy.allow-openbao-to-kubernetes-api.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows OpenBao pods to access the Kubernetes API server for the Kubernetes auth
      method (TokenReview) and general cluster operations.
  labels:
    app.kubernetes.io/name: vault
  name: allow-openbao-to-kubernetes-api
  namespace: vault
spec:
  egress:
  - toEntities:
    - kube-apiserver
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vault
      component: server
